--- a/res/opgl.qrc
+++ b/res/opgl.qrc
@@ -2,6 +2,7 @@
     <qresource>
         <file>icons/3d-axis.png</file>
         <file>icons/about_author.png</file>
+        <file>icons/air_part.png</file>
         <file>icons/arrow_down.png</file>
         <file>icons/arrow_left.png</file>
         <file>icons/arrow_right.png</file>
